--- a/views/cards/show20.ejs
+++ b/views/cards/show20.ejs
@@ -145,7 +145,7 @@
               <a href="#" class="btn btn-lg btn-danger easy-btn" id="btn-predchozi-back"><i class="fas fa-chevron-left"></i></a>
               <a href="#" class="btn btn-lg btn-danger easy-btn" id="btn-dalsi">Další</a>
             </div>
-            <div>
+            <div id="rotate-div">
               <a href="#" id="rotate-back" class="rotate-icon"><i class="fas fa-sync-alt fa-lg"></i></a>
             </div>
           </div>
