--- a/views/sections/listAllCards.ejs
+++ b/views/sections/listAllCards.ejs
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
         <div class="col-12 d-flex justify-content-between mb-4">
-            <a href="/category/<%= section.category %>" class="btn btn-sm btn-outline-danger">Zpět na kategorii</a>
+            <a href="/category/<%= section.category %>" class="btn btn-sm btn-outline-danger">Zpět na předmět</a>
             <a href="/category/<%= section.category %>/section/<%= section._id %>/newCard" class="btn btn-sm btn-danger">Přidat kartu</a>
         </div>
     </div>
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-sm-1 text-small text-center"><%= i + 1%></div>
             <div class="col-sm-3 text-small"><%- card.pageA %> </div>
-            <div class="col-sm-5 text-small"><%- card.pageB %> </div>
+            <div class="col-sm-6 text-small"><%- card.pageB %> </div>
             <div class="col-sm-1"><a href="/cards/edit/<%= card._id%>">Upravit</a></div>
             <div class="col-sm-1"><a href="/cards/remove/<%= card._id%>">Odstranit</a></div>
             <hr>
