--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -7,20 +7,20 @@
     </div>
     <% users.forEach((user, i) => { %> 
         <div class="row text-smaller">
-            <div class="col-sm-1 d-flex justify-content-between align-items-start">
+            <div class="col-sm-1 col-1 d-flex justify-content-between align-items-start">
                 <p><%= users.length - i %></p>
             </div>
-            <div class="col-sm-2 d-flex justify-content-between align-items-start">
-                <p class="mb-0"><%= user.email %></p>
+            <div class="col-sm-2 col-7 d-flex justify-content-between align-items-start">
+                <p class="mb-0 text-bold"><%= user.email %></p>
                 <% if (user.activeInLast48Hours) { %>
                     <span style="color:green"><b>A</b></span>
                 <% } %> 
             </div>
-            <div class="col-sm-1">
+            <div class="col-sm-1 col-4">
                 <div><%= user.faculty %></div>
                 <div><%= user.source %></div>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-2 col-7">
                 <div>
                     R: <%= user.updatedDateOfRegistration %> |
                     SC: <%= user.savedCards.length %>
@@ -29,22 +29,35 @@
                     <div>LA: <%= user.updatedLastActive %></div>
                 </div>
             </div>
-            <div class="col-sm-1"><%= user.cardsSeen %></div>
+            <div class="col-sm-1 col-1">
+                <%= user.cardsSeen %>
+            </div>
             <% if(user.isPremium){ %> 
-                <div class="col-sm-1">Premium <% if(user.premiumGrantedByAdmin){ %>(A) <% } %></div>
+                <div class="col-sm-1 col-4">Premium <% if(user.premiumGrantedByAdmin){ %>(A) <% } %></div>
             <% } else { %>
-                <div class="col-sm-1">-</div>
+                <div class="col-sm-1 col-5" >-</div>
             <% } %>
             <% if (user.isPremium && !user.premiumGrantedByAdmin && user.plan !== "none") { %>
-                <div class="col-sm-1 d-flex justify-content-center align-items-center">
-                    <a href="/admin/<%=user._id%>/showDetail" class="btn btn-sm btn-danger">Detail</a>
-                </div>
-                <div class="col-sm-2 text-center">
-                    <p class="text-muted">- aktivní placené Premium -</p>
+                <div class="col-sm-4 col-12">
+                    <div class="d-flex justify-content-between align-items-center my-2 my-sm-0">
+                        <div class="col-sm-1 d-flex justify-content-center align-items-center">
+                            <a href="/admin/<%=user._id%>/showDetail" class="btn btn-sm btn-danger">Detail</a>
+                        </div>
+                        <div class="col-sm-2 text-center w-100">
+                            <p class="text-muted mb-0">- aktivní placené Premium -</p>
+                        </div>
+                    </div>
                 </div>
             <% } else { %>
-                <div class="col-sm-1 d-flex justify-content-center align-items-center">
-                    <a href="/admin/<%=user._id%>/showDetail" class="btn btn-sm btn-danger">Detail</a>
+                <div class="col-sm-4 col-12">
+                    <div class="d-flex justify-content-between align-items-center my-2 my-sm-0">
+                        <div class="col-sm-1 d-flex justify-content-center align-items-center">
+                            <a href="/admin/<%=user._id%>/showDetail" class="btn btn-sm btn-danger">Detail</a>
+                        </div>
+                        <div class="col-sm-2 text-center w-100">
+                            <p class="text-muted mb-0"></p>
+                        </div>
+                    </div>
                 </div>
             <% } %>
             <hr>
