--- a/views/category.ejs
+++ b/views/category.ejs
@@ -150,7 +150,7 @@
                                     <% if (section.isPremium) { %>
                                         <a href="/category/<%= category.name %>/sectionStatus/<%= section._id %>/toZdarma" style="border:1px solid;border-radius:5px"><i class="fas fa-arrow-right" title="Změnit na zdarma"></i>Z</a>
                                     <% } %>
-                                    <a href="#" class="remove-icon" data-bs-toggle="modal" data-bs-target="#deleteSectionModal<%=section._id%>"><i class="fas fa-times px-1" title="Odstranit balíček"></i></a>
+                                    <a href="#" class="remove-icon" data-bs-toggle="modal" data-bs-target="#deleteSectionModal<%=section._id%>unpublished"><i class="fas fa-times px-1" title="Odstranit balíček"></i></a>
                                 </div>
                             </div>
                             <div class="col-2 d-flex justify-content-evenly align-items-center">
@@ -160,8 +160,8 @@
                         </div>
                         <hr class="">
 
-                          <!-- MODAL - Delete section confirmation -->
-                            <div class="modal fade" id="deleteSectionModal<%=section._id%>" tabindex="-1">
+                        <!-- MODAL - Delete section confirmation -->
+                            <div class="modal fade" id="deleteSectionModal<%=section._id%>unpublished" tabindex="-1">
                                 <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -169,12 +169,13 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                                     </div>
                                     <div class="modal-body d-flex justify-content-center align-items-center">
-                                        <a href="/category/<%= category.name %>/removeSection/<%= section._id %>/" class="btn btn-danger">Ano, odstranit</a>
+                                        <form action="/category/<%= category.name %>/removeSection/<%= section._id %>?_method=DELETE" method="POST">
+                                            <button class="btn btn-danger">Ano, odstranit</button>
+                                        </form>
                                     </div>
                                 </div>
                                 </div>
                             </div>
-
                         <% } %>
                 <% }) }%>
             </div>
@@ -191,20 +192,20 @@
                 <h4>Přidat nový balíček</h4>
                 <form action="/category/<%= category.name  %>/newSection" method="POST">
                     <div class="form-group row">
-                        <label for="name" class="col-md-2 col-form-label">Nadpis</label>
-                        <div class="col-md-6">
+                        <label for="name" class="col-lg-2 col-form-label">Nadpis</label>
+                        <div class="col-lg-6">
                             <input type="text" class="form-control form-borders" id="name" name="name" required>
                         </div>
                     </div>
                     <div class="row mt-2">
-                        <label for="desc" class="col-md-2 col-form-label">Podnadpis</label>
-                        <div class="col-md-6">
+                        <label for="desc" class="col-lg-2 col-form-label">Podnadpis</label>
+                        <div class="col-lg-6">
                             <input type="text" class="form-control form-borders" id="desc" name="desc" required>
                         </div>
                     </div>
                     <div class="row mt-2">
-                        <label for="previousSection" class="col-md-2 col-form-label">Navazuje na</label>
-                        <div class="col-md-6">
+                        <label for="previousSection" class="col-lg-2 col-form-label">Navazuje na</label>
+                        <div class="col-lg-6">
                             <select class="form-select form-borders" name="previousSection" id="previousSection">
                                 <option value="lastSection">nenavazuje na jiný balíček</option>
                                 <% category.sections.forEach(section => { %>
@@ -214,8 +215,8 @@
                         </div>
                     </div>
                     <div class="row mt-2">
-                        <label for="isPremium" class="col-md-2 col-form-label">Dostupnost</label>
-                        <div class="col-md-4">
+                        <label for="isPremium" class="col-lg-2 col-form-label">Dostupnost</label>
+                        <div class="col-lg-4">
                             <select class="form-select form-borders" name="isPremium" id="isPremium">
                                 <option value="zdarma">Zdarma</option>
                                 <option value="premium">Premium</option>
