cron jobs logic, contactForm on contact page

--- a/views/admin/categories.ejs
+++ b/views/admin/categories.ejs
@@ -15,8 +15,8 @@
             <table class="w-100">
                 <tr>
                     <th><p>Poř.</p></th>
-                    <th><p>Název kategorie</p></th>
-                    <th><p>Označení</p></th>
+                    <th><p>Název předmětu</p></th>
+                    <th><p>Zkratka</p></th>
                     <th><p>Ikona</p></th>
                     <th><p>Počet balíčků</p></th>
                     <th><p>Počet karet</p></th>
