--- a/views/cards/new.ejs
+++ b/views/cards/new.ejs
@@ -19,7 +19,8 @@
             </div>
             <div class="col-12 mb-4">
             <button class="btn btn-danger btn-sm" type="submit">Vložit kartičku</button>
-            <a href="/category/<%= category %>/section/<%= sectionId %>/listAllCards" class="btn btn-sm btn-outline-danger">Zpět</a>
+            <a href="/category/<%= category %>/section/<%= sectionId %>/listAllCards" class="btn btn-sm btn-outline-danger">Všechny kartičky v balíčku</a>
+            <a href="/category/<%= category %>" class="btn btn-sm btn-outline-danger">Zpět na předmět</a>
             </div>
         </form>
     </div>
