--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,7 +6,7 @@
                 <a href="https://www.flaticon.com/" title="icons" class="footer-link px-2">Icons created by Freepik - Flaticon</a>
             </div>
             <div class="d-flex flex-row justify-content-between">
-                <div class="mx-2 d-flex justify-content-center align-items-center"><a href="https://www.instagram.com/inlege/" class=""><img src="/img/icon_instagram.png" class="ig-icon" alt=""></a></div>
+                <div class="mx-2 d-flex justify-content-center align-items-center"><a href="https://www.instagram.com/inlege/" target="_blank" class=""><img src="/img/icon_instagram.png" class="ig-icon" alt=""></a></div>
                 <div class="mx-2 d-flex justify-content-center align-items-center"><a href="/legal/feedback" class="">Zaslat feedback</a></div>
                 <div class="mx-2 d-flex justify-content-center align-items-center"><a href="/legal/contact" class="footer-link">Kontakt</a></div>
                 <div class="mx-2 d-flex justify-content-center align-items-center"><a href="/legal/vop" class="footer-link">Obchodní podmínky</a></div>
