final version 2.0 16_01_2024 9PM upload

--- a/views/sections/edit.ejs
+++ b/views/sections/edit.ejs
@@ -29,7 +29,7 @@
             </div>
             <div class="col-12">
                 <button class="btn btn-danger btn-sm" type="submit">Uložit</button>
-                <a href="/category/<%= section.category %>" class="btn btn-outline-danger btn-sm" type="submit">Zpět na kategorii</a>
+                <a href="/category/<%= section.category %>" class="btn btn-outline-danger btn-sm" type="submit">Zpět na předmět</a>
             </div>
         </form>
     </div>
