--- a/views/admin/email.ejs
+++ b/views/admin/email.ejs
@@ -11,11 +11,11 @@
             <form action="/admin/email" method="POST">
                 <div class="form-group">
                     <label for="subjectAll">Předmět e-mailu</label>
-                    <textarea class="form-control" id="subjectAll" name="subjectAll" rows="1" required></textarea>
+                    <textarea class="form-control form-borders" id="subjectAll" name="subjectAll" rows="1" required></textarea>
                 </div>
                 <div class="form-group">
                     <label for="textAll">Text e-mailu</label>
-                    <textarea class="form-control" id="textAll" name="textAll" rows="15" required></textarea>
+                    <textarea class="form-control form-borders" id="textAll" name="textAll" rows="15" required></textarea>
                 </div>
                 <div class="form-check mt-3">
                     <input class="form-check-input" type="radio" name="groupChoice" id="radioAll" value="radioAll">
