--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -107,6 +107,23 @@
                     <%= demoLimitRegistrationRatio %> %
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-10">
+                    <p>Počet spuštění náhodného testu</p>
+                </div>
+                <div class="col-md-2">
+                    <%= startRandomTestStats.eventCount %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-10">
+                    <p>Počet spuštění náhodných kartiček</p>
+                </div>
+                <div class="col-md-2">
+                    <%= startRandomCardsStats.eventCount %>
+                </div>
+            </div>
+            <hr />
             </div>
         </div>
         <div class="col-md-6 mb-3 pt-2">
