--- a/views/cards/show20shuffle.ejs
+++ b/views/cards/show20shuffle.ejs
@@ -45,17 +45,14 @@
     <nav class="navbar bg-white" style="border-bottom: 1px solid #EEEEEE;" id="card-nav">
       <div class="container">
         <ul class="navbar-nav">
-          <li><a href="/category/<%= section.category %>" class="back-link"><i
+          <li><a href="/category/<%= category.name %>" class="back-link"><i
                 class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
           <li>
-            <p class="m-0"><small id="sectionId" name="<%= section._id %>">
-              <span class="nezobrazovat-na-mobilu"><%= section.name %></span>
+            <p class="m-0"><small id="categoryId" name="<%= category._id %>">
+              <span class="nezobrazovat-na-mobilu">Sada náhodných kartiček z předmětu <%= category.text %></span>
             </p></small>
           </li>
         </ul>
-        <% if (xmas && currentUser && !currentUser.isPremium) { %>
-          <a href="/vanoce" target="_blank"><img src="/img/xmas_gift.png" alt="" style="max-width: 40px;margin-right: 10px;"></a>
-        <% } %>
       </div>
     </nav>
 
@@ -67,7 +64,7 @@
         <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
           <div class="card d-flex flex-row justify-content-center align-items-center">
             <div class="card-body text-center">
-              <p class="text-muted text-smaller mb-1">Kartička <span id="progressCardNumMobile"><span id="progressNumMobile">0</span> z <%= section.cards.length %>
+              <p class="text-muted text-smaller mb-1">Kartička <span id="progressCardNumMobile"><span id="progressNumMobile">0</span> z <span class="cards-length-span">20</span>
               </p>
               <div class="progress">
                   <div class="progress-bar bg-danger" role="progressbar" style="width:0%" id="progressBarMobile">
@@ -103,10 +100,10 @@
             <div class="card-body text-center">
               <div class="card-body category-box d-flex flex-column align-items-center justify-content-center pt-1">
                 <div class="rounded-circle icon-background-medium d-flex justify-content-center align-items-center">
-                  <img src="/img/<%= categoryIcon %>" class="img-fit" alt="" />
+                  <img src="/img/<%= category.icon %>" class="img-fit" alt="" />
                 </div>
               </div>
-              <p class="text-muted text-smaller">Kartička <span id="progressCardNumMac"><span id="progressNumMac">0</span> z <%= section.cards.length %>
+              <p class="text-muted text-smaller">Kartička <span id="progressCardNumMac"><span id="progressNumMac">0</span> z <span class="cards-length-span">20</span>
               </p>
               <div class="progress mb-2">
                   <div class="progress-bar bg-danger" role="progressbar" style="width:0%" id="progressBarMac">
@@ -193,7 +190,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-      <script src="/js/card20.js"></script>
+      <script src="/js/card20shuffle.js"></script>
       <!--element for JS properly working while loading data-->
       <div id="data-loaded-wrapper">
         <div id="data-loaded"></div>
