--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap_customised.css">
   <link rel="stylesheet" href="/css/custom.css">
-  <link rel="stylesheet" href="/css/card.css">
+  <link rel="stylesheet" href="/css/question.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400&family=Roboto&display=swap" rel="stylesheet">
@@ -48,14 +48,11 @@
           <li><a href="/category/<%= section.category %>" class="back-link"><i
                 class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
           <li>
-            <p class="m-0"><small id="sectionId" name="<%= section._id %>">
-              <span class="nezobrazovat-na-mobilu"><%= section.name %></span>
+            <p class="m-0"><small id="sectionId" name="<%= section._id %>" cat="<%= section.category %>">
+                <span class="nezobrazovat-na-mobilu"><%= section.name %></span>
             </p></small>
           </li>
         </ul>
-        <% if (xmas && currentUser && !currentUser.isPremium) { %>
-          <a href="/vanoce" target="_blank"><img src="/img/xmas_gift.png" alt="" style="max-width: 40px;margin-right: 10px;"></a>
-        <% } %>
       </div>
     </nav>
 
@@ -67,7 +64,7 @@
         <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
           <div class="card d-flex flex-row justify-content-center align-items-center">
             <div class="card-body text-center">
-              <p class="text-muted text-smaller mb-1">Kartička <span id="progressCardNumMobile"><span id="progressNumMobile">0</span> z <%= section.cards.length %>
+              <p class="text-muted text-smaller mb-1">Otázka <span id="progressCardNumMobile"><span id="progressNumMobile">0</span> z <span class="questions-length-span"><%= section.questions.length %></span>
               </p>
               <div class="progress">
                   <div class="progress-bar bg-danger" role="progressbar" style="width:0%" id="progressBarMobile">
@@ -79,34 +76,27 @@
         </div>
 
 
-        <!--FLIPCARD-->
+        <!--QUESTION-->
         <div class="col-lg-6 offset-lg-2 mb-3">
-          <div class="flip-card" id="flip-card">
-            <div class="border-grey flip-card-inner" id="flip-card-inner">
-              <div class="card-body flip-card-front p-sm-3 pt-sm-4 px-0 pt-3">
-                <div class="front-main-content d-flex justify-content-center align-items-center">
-                  <div class="card-text m-4 text-center" id="pageA"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
+            <div class="question-card-wrapper">
+                <div class="question-card text-gradient" id="question-card">
+                    <div id="question-content" class="d-flex justify-content-center align-items-center" style="height: 100%">
+                        <div class="card-text m-4 text-center"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
+                    </div>
                 </div>
-              </div>
-              <div class="card-body flip-card-back p-sm-3 pt-sm-4 px-0 pt-3">
-                <div class="back-main-content d-flex justify-content-center align-items-center text-gradient">
-                  <div class="card-text m-4" id="pageB">Strana B</div>
-                </div>
-              </div>
             </div>
-          </div>
         </div>
 
         <!--PROGRESS STATUS PC-->
         <div class="col-lg-2 mb-3 mt-5 mt-lg-0 nezobrazovat-na-mobilu">
           <div class="card">
-            <div class="card-body text-center">
+            <div class="card-body text-center" style="padding: 0.5rem">
               <div class="card-body category-box d-flex flex-column align-items-center justify-content-center pt-1">
                 <div class="rounded-circle icon-background-medium d-flex justify-content-center align-items-center">
-                  <img src="/img/<%= categoryIcon %>" class="img-fit" alt="" />
+                  <img src="/img/<%= category.icon %>" class="img-fit" alt="" />
                 </div>
               </div>
-              <p class="text-muted text-smaller">Kartička <span id="progressCardNumMac"><span id="progressNumMac">0</span> z <%= section.cards.length %>
+              <p class="text-muted text-smaller">Otázka <span id="progressCardNumMac"><span id="progressNumMac">0</span> z <span class="questions-length-span"><%= section.questions.length %></span>
               </p>
               <div class="progress mb-2">
                   <div class="progress-bar bg-danger" role="progressbar" style="width:0%" id="progressBarMac">
@@ -115,40 +105,39 @@
               </div>
             </div>
           </div>
+          <div class="card mt-3">
+            <div class="card-body" id="questions-list" style="padding: 0.5rem;padding-left:1rem">
+                <div class="card-text m-4 text-center"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
+            </div>
+          </div>
         </div>
       </div>
         
       </div>
       
-      <!--FRONT CARD MENU-->
-      <div class="row" id="front-menu-row">
-        <div class="col-lg-6 offset-lg-2">
-          <div class="front-menu d-flex justify-content-between align-items-center border-grey">
-            <a href=""></a>
-            <div class="">
-              <a href="#" class="btn btn-lg btn-outline-danger disabled" id='btn-predchozi-front'><i class="fas fa-chevron-left"></i></a>
-              <a href="#" class="btn btn-lg btn-outline-danger disabled" id='btn-otocit'>Otočit</a>
-            </div>
-            <a href=""></a>
-          </div>
-        </div>
-      </div>
-
       <!--BACK CARD MENU-->
       <div class="row hide" id="back-menu-row">
         <div class="col-lg-6 offset-lg-2">
           <div class="back-menu d-flex justify-content-between align-items-center border-grey">
             <div id="star-div">
-              <div id="save-star" name="#" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
             </div>
             <div>
               <a href="#" class="btn btn-lg btn-danger easy-btn" id="btn-predchozi-back"><i class="fas fa-chevron-left"></i></a>
               <a href="#" class="btn btn-lg btn-danger easy-btn" id="btn-dalsi">Další</a>
             </div>
             <div id="rotate-div">
-              <a href="#" id="rotate-back" class="rotate-icon"><i class="fas fa-sync-alt fa-lg"></i></a>
             </div>
           </div>
+        </div>
+      </div>
+
+      <div class="row zobrazovat-jen-na-mobilu">
+        <div class="col-12">
+            <div class="card mt-3">
+                <div class="card-body" id="questions-list-mobile">
+                    <div class="card-text m-4 text-center"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
+                </div>
+            </div>
         </div>
       </div>
 
@@ -156,32 +145,13 @@
         <div class="col-lg-6 offset-lg-2" id="mini-menu">
           <div class="text-muted text-center text-small d-flex justify-content-center align-items-center mt-4">
             <% if(currentUser && currentUser.isEditor){ %>
-              <a href="#" target="_blank" class="text-muted mx-2" id="btn-upravit">Upravit kartu</a>
-              <a href="#" class="text-muted mx-2" id="btn-odstranit">Odstranit kartu</a>
+              <a href="#" target="_blank" class="text-muted mx-2" id="btn-upravit">Upravit otázku</a>
             <% } %>
             <a href="#" target="_blank" class="text-muted mx-2" id="btn-nahlasit">Nahlásit chybu</a>
-            <a class="text-muted mx-2 nezobrazovat-na-mobilu">Otáčej [mezerníkem]</a>
           </div>
         </div>
       </div>
     </main>
-
-    <!-- MODAL - Saving is Premium feature info -->
-    <div class="modal fade" id="savePremium" tabindex="-1">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-          <div class="modal-body" style="text-align: center;">
-            <h5 class="modal-title mb-3" style="text-align: center;"><i class="far fa-star fa-lg"></i> Vyzkoušej ukládání kartiček</h5>
-            <p class="p-3">Hvězdičkou si můžeš <b>ukládat</b> kartičky, které si potřebuješ více zopakovat. Poté si je můžeš <b>procházet</b> pod odkazem "Uložené kartičky" v horním menu.</p>
-            <p class="pb-3 px-3">Tohle a další stovky kartiček získáš <b>s předplatným Premium</b>.</p>
-            <a href="/premium" class="btn btn-danger">Zjistit více</a>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <%- include('../partials/footer') %>
       <!-- JS for Bootstrap -->
@@ -193,7 +163,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-      <script src="/js/card20.js"></script>
+      <script src="/js/question.js"></script>
       <!--element for JS properly working while loading data-->
       <div id="data-loaded-wrapper">
         <div id="data-loaded"></div>
