--- a/views/legal/contact.ejs
+++ b/views/legal/contact.ejs
@@ -43,7 +43,7 @@
                                 <p>Sídlo</p>
                             </div>
                             <div class="col-8">
-                                <p>Ztracená 335/19,<br /> Olomouc 779 00</p>
+                                <p>Kaštanová 493/3,<br /> Olomouc 779 00</p>
                             </div>
                             <hr />
                             <div class="col-4 fw-bold">
