--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -109,6 +109,16 @@
                                         </div>
                                     </div>
                                 </li>
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            50 testových otázek / měsíc
+                                        </div>
+                                    </div>
+                                </li>
                                 <li style="opacity: 0">placeholder</li>
                                 <li style="opacity: 0">placeholder</li>
                                 <li style="opacity: 0">placeholder</li>
@@ -170,6 +180,16 @@
                                         </div>
                                         <div class="px-2">
                                             dalších 1 000+ kartiček
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            testové otázky bez limitu
                                         </div>
                                     </div>
                                 </li>
@@ -261,6 +281,16 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
+                                            testové otázky bez limitu
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
                                             funkce ukládání kartiček
                                         </div>
                                     </div>
@@ -333,6 +363,16 @@
                                         </div>
                                         <div class="px-2">
                                             dalších 1 000+ kartiček
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            testové otázky bez limitu
                                         </div>
                                     </div>
                                 </li>
