--- a/views/questions/finished.ejs
+++ b/views/questions/finished.ejs
@@ -76,7 +76,7 @@
                         <% if (nextSection === "lastSection" || !nextSection.isPublic) { %>
                             <div class="d-flex flex-column justify-content-center align-items-center mt-3">
                                 <h5 class="mb-3">Navazující balíček</h5>
-                                <p class="mb-0 grey-highlight px-3 py-2">Na tento balíček nenavazuje žádný balíček nenavazuje.</p>
+                                <p class="mb-0 grey-highlight px-3 py-2">Na tento balíček nenavazuje žádný jiný balíček.</p>
                             </div>
                         <% } %>
                         <% if (!currentUser.isPremium && nextSection.isPremium) { %>
